--- a/service.html
+++ b/service.html
@@ -565,7 +565,8 @@
         <!--=====================================-->
         <div class="section-heading heading-light">
             <!-- <span class="subtitle">Let's Work Together</span> -->
-            <h2 class="title">Need a successful project?</h2>
+                        <h2 class="title" style="color: #669264;">Need a successful project?</h2>
+
             <a class='axil-btn btn-large btn-fill-white' href='contact.html'>Estimate Project</a>
         </div>
        
