--- a/index.html
+++ b/index.html
@@ -1031,8 +1031,9 @@ and Social Media services in Kigali, Rwanda. ">
         <!--=====================================-->
         <!--=     Call To Action Area Start     =-->
         <!--=====================================-->
+        <br><br>    
         <div class="section-heading heading-light">
-            <h2 class="title">Need a successful Project Plan?</h2>
+            <h2 class="title" style="color: #669264;">Need a successful Project Plan?</h2>
             <a class='axil-btn btn-large btn-fill-white' href='contact.html'>Estimate Project</a>
         </div>
       
