--- a/about-us.html
+++ b/about-us.html
@@ -169,11 +169,10 @@
             <div class="container">
                 <div class="section-heading heading-left" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="300">
                     <h1 class="title h2">One of the quickly rising agencies</h1>
-                    <p>Every day we help companies like yours develop and maintain digital projects of all shapes and sizes. On time and on budget.
-                    </p>
+                    <p>Every day, we partner with organizations to secure and manage events of all scales and complexities. From international conferences to private celebrations, we deliver safety, precision, and professionalism—on time and with excellence. </p>
                 </div>
                 <div class="banner-thumbnail thumbnail-4" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
-                    <img src="banner/banner-thumb-3.png" alt="Illustration">
+                    <!-- <img src="banner/banner-thumb-3.png" alt="Illustration"> -->
                 </div>
             </div>
             <ul class="shape-group-8 list-unstyled">
@@ -202,8 +201,8 @@
                     <div class="col-xl-5 col-lg-6">
                         <div class="case-study-featured">
                             <div class="section-heading heading-left">
-                                <span class="subtitle">Who we are</span>
-                                <h2 class="title">Building digital presence for businesses.</h2>
+                                <span class="subtitle">Who we are</span>    
+                                <h2 class="title">Delivering Secure and Seamless Events.</h2>
                                 <p>IzubaGen is a leading agency that offers matchless services at affordable prices.
                                  We offer an extensive range of services all over the world and boast having a long list of happy clients.</p>
                                 <a class='axil-btn btn-fill-primary btn-large' href='portfolio-2.html'>View Portfolio</a>
@@ -237,43 +236,43 @@
                 <div class="section-heading heading-light-left mb--100">
                     <span class="subtitle">Our Value</span>
                     <h2 class="title">Why should you work with us?</h2>
-                    <p class="opacity-50">Choosing the right Digital agency is critical to your success as a modern business owner. There are a plethora of options available to small businesses in Rwanda, so it’s crucial to work with a company that understands your needs. At IzubaGen, we draw on years of experience in online services to help our clients achieve their commercial goals.
-                                So, why is IzubaGen the right digital agency for you? Let’s find out!</p>
+                    <p class="opacity-50">At Crowd Minders, our values drive everything we do. These principles guide our actions and define the exceptional service we provide to our clients: </p>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="about-quality active">
                             <h3 class="sl-number">1</h3>
-                            <h5 class="title">We provide full consultations</h5>
-                            <p>At IzubaGen, we offer consultations to all prospective clients. We want you to understand the ins-and-outs of how a new SEO strategy can take your business to the next level. We’re great listeners—and we’ll help you determine your business’s needs, so we can form a suitable strategy.</p>
+                            <h5 class="title">Professionalism in Every Detail</h5>
+                            <p>We are committed to maintaining the highest standards of professionalism in every aspect of our work. From the initial planning phase to on-ground execution, our team ensures meticulous attention to detail and unwavering dedication to delivering excellence.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="about-quality">
                             <h3 class="sl-number">2</h3>
-                            <h5 class="title">We value our clients</h5>
-                            <p>IzubaGen is heavily invested in the success of our clients. We only provide you with recommendations on services that can help improve your business. Our team is dedicated to helping your business grow.</p>
+                            <h5 class="title">Safety as a Priority</h5>
+                            <p>Your safety is our mission. We design and implement comprehensive security plans that protect attendees, VIPs, and staff while fostering an environment of trust and peace of mind.  </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="about-quality">
                             <h3 class="sl-number">3</h3>
-                            <h5 class="title">We're are experts at designs</h5>
-                            <p>Your website is your online storefront. That’s why our dedicated team are available to develop sleek, aesthetic websites that help improve the online image of your company. We offer bespoke business websites to all our clients.</p>
+                            <h5 class="title">Tailored Solutions for Unique Needs</h5>
+                            <p>No two events are the same, and neither are our services. We work closely with each client to understand their specific needs, crafting personalized solutions that align with their vision and objectives.  </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="about-quality">
                             <h3 class="sl-number">4</h3>
-                            <h5 class="title">We're SEO pros</h5>
-                            <p>Search Engine Optimization (SEO) is the process of optimizing your website to appear in the top search results of major search engines—like Google. It’s one of the best ways to drive organic web traffic to your site. We can optimize your website and its content to be the best performing site in your niche.</p>
+                            <h5 class="title">Empowering Collaboration</h5>
+                            <p>We believe in teamwork and open communication. By fostering strong partnerships with clients, stakeholders, and our staff, we ensure seamless coordination and a shared commitment to success.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="about-quality">
                             <h3 class="sl-number">5</h3>
-                            <h5 class="title">Seamless Customer Support</h5>
-                            <p>Our firm is dedicated to forming long-term partnerships with our clients. We understand that you may have urgent questions at every stage of the process. Our client manager will always be on hand to discuss your questions and concerns.</p>
+                            <h5 class="title">Commitment to Innovation</h5>
+                            <p>Staying ahead means embracing the latest tools and techniques in security and protocol. Our team continuously adapts to industry advancements, ensuring we deliver cutting-edge solutions that exceed expectations.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -291,7 +290,7 @@
         <!--=====================================-->
         <!--=       Work Process Area Start     =-->
         <!--=====================================-->
-        <section class="section section-padding bg-color-light pb--70">
+        <!-- <section class="section section-padding bg-color-light pb--70">
             <div class="container">
                 <div class="section-heading mb--90">
                     <span class="subtitle">Process</span>
@@ -370,7 +369,7 @@
                 <li class="shape shape-5"><img src="others/line-4.png" alt="Line"></li>
                 <li class="shape shape-6"><img src="others/line-5.png" alt="Line"></li>
             </ul>
-        </section>
+        </section> -->
         <!--=====================================-->
         <!--=     Call To Action Area Start     =-->
         <!--=====================================-->
