--- a/index.htm
+++ b/index.htm
@@ -147,9 +147,8 @@ and Social Media services in Kigali, Rwanda. ">
                                     <li class="menu-item-has-children">
                                         <a href="javascript:void(0)">Pages</a>
                                         <ul class="axil-submenu">
-                                            <li><a href='javascript:void(0)'>About Us</a></li>
-                                            
-                                            <li><a href='javascript:void(0)'>Pricing Table</a></li>
+                                            <li><a href='about-us.html'>About Us</a></li>                                            
+                                            <li><a href='javascript:void(0)'>STAFF</a></li>
 
                                         </ul>
                                     </li>
@@ -1031,6 +1030,7 @@ and Social Media services in Kigali, Rwanda. ">
         <!--=====================================-->
         <!--=     Call To Action Area Start     =-->
         <!--=====================================-->
+        <br><br>    
         <div class="section-heading heading-light">
             <h2 class="title" style="color: #669264;">Need a successful Project Plan?</h2>
             <a class='axil-btn btn-large btn-fill-white' href='contact.html'>Estimate Project</a>
