--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                                     <li class="menu-item-has-children">
                                         <a href="javascript:void(0);">Pages</a>
                                         <ul class="axil-submenu">
-                                            <li><a href='javascript:void(0)'>About Us</a></li>
+                                            <li><a href='about-us.html'>About Us</a></li>
                                             
                                             <li><a href='javascript:void(0)'>Work_Table</a></li>
 
