--- a/pricing-table.html
+++ b/pricing-table.html
@@ -115,7 +115,7 @@
                                         <ul class="axil-submenu">
                                             <li><a href='about-us.html'>About Us</a></li>
                                             
-                                            <li><a href='pricing-table.html'>Pricing Table</a></li>
+                                            <li><a href='pricing-table.html'>STAFF</a></li>
 
                                         </ul>
                                     </li>
