--- a/service.html
+++ b/service.html
@@ -233,7 +233,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-27.png" alt="icon">
+                                    <img src="icon/security-agent.png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)">Customized Security Plans</a></h5>
@@ -246,7 +246,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-4.png" alt="icon">
+                                    <img src="icon/international-childrens-day.png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)"> On-Site Implementation</a></h5>
@@ -258,7 +258,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-30.png" alt="icon">
+                                    <img src="icon/red-carpet.png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title">Post-Event Review</h5>
@@ -294,7 +294,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-31.png" alt="icon">
+                                    <img src="icon/leadership.png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)"> Professional Crowd Management</a></h5>
@@ -306,7 +306,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-32.png" alt="icon">
+                                    <img src="icon/planner.png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)"> Situational De-Escalation</a></h5>
@@ -318,7 +318,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="300">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-33.png" alt="icon">
+                                    <img src="icon/vip.png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)"> VIP Protection</a></h5>
@@ -341,7 +341,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-34.png" alt="icon">
+                                    <img src="icon/usher (4).png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)">Personalized Guest Assistance</a></h5>
@@ -353,7 +353,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-35.png" alt="icon">
+                                    <img src="icon/welcome (1).png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)">Real-Time Coordination</a></h5>
@@ -365,7 +365,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="300">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-36.png" alt="icon">
+                                    <img src="icon/usher (3).png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)">Exceptional First Impressions</a></h5>
@@ -413,7 +413,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-39.png" alt="icon">
+                                    <img src="icon/vip-card.png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)">Punctual and Reliable Itineraries</a></h5> 
@@ -425,7 +425,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-40.png" alt="icon">
+                                    <img src="icon/vip.png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)">Cultural & Protocol Expertise</a></h5>
@@ -437,7 +437,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="300">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-41.png" alt="icon">
+                                    <img src="icon/invitation.png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)">Exclusive & Confidential Services</a></h5>
@@ -522,7 +522,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-45.png" alt="icon">
+                                    <img src="icon/team-building.png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)">Immediate Action Plans</a></h5>
@@ -534,10 +534,10 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-46.png" alt="icon">
+                                    <img src="icon/first-aid-box.png" alt="icon">
                                 </div>
                                 <div class="content">
-                                    <h5 class="title"> <a href="javascript:void(0)">Medical Aid Expertise</a></h5>
+                                    <h5 class="title"> <a href="javascript:void(0)">First Aid Assistance</a></h5>
                                     <p>rained in first response care, our team is equipped to assist with medical emergencies and ensure attendee safety.</p>
                                    
                                 </div>
@@ -546,7 +546,7 @@
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="300">
                             <div class="services-grid service-style-2">
                                 <div class="thumbnail">
-                                    <img src="icon/icon-47.png" alt="icon">
+                                    <img src="icon/team.png" alt="icon">
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)">Disaster Recovery Solutions</a></h5>
@@ -637,12 +637,13 @@
                                 </div>
                 
                                 <!-- Resources Section -->
-                                <div class="col-sm-6">
+                                  <div class="col-sm-6">
                                     <div class="footer-widget">
                                         <h6 class="widget-title">Resources</h6>
                                         <ul class="footer-menu list-unstyled">
                                             <li><a href="portfolio-2.html">Showcase</a></li>
                                             <li><a href="contact.html">Get in touch</a></li>
+                                            <li><a href="contact.html">Get Directions</a></li>
                                         </ul>
                                     </div>
                                 </div>
