--- a/about-us.html
+++ b/about-us.html
@@ -168,7 +168,7 @@
         <div class="breadcrum-area breadcrumb-banner">
             <div class="container">
                 <div class="section-heading heading-left" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="300">
-                    <h1 class="title h2">One of the quickly rising agencies</h1>
+                    <h1 class="title h2">Your Safety. Our Priority. Securing Rwanda’s Events and Beyond.</h1>
                     <p>Every day, we partner with organizations to secure and manage events of all scales and complexities. From international conferences to private celebrations, we deliver safety, precision, and professionalism—on time and with excellence. </p>
                 </div>
                 <div class="banner-thumbnail thumbnail-4" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
@@ -451,12 +451,13 @@
                                 </div>
                 
                                 <!-- Resources Section -->
-                                <div class="col-sm-6">
+                                  <div class="col-sm-6">
                                     <div class="footer-widget">
                                         <h6 class="widget-title">Resources</h6>
                                         <ul class="footer-menu list-unstyled">
                                             <li><a href="portfolio-2.html">Showcase</a></li>
                                             <li><a href="contact.html">Get in touch</a></li>
+                                            <li><a href="contact.html">Get Directions</a></li>
                                         </ul>
                                     </div>
                                 </div>
