--- a/contact.html
+++ b/contact.html
@@ -318,12 +318,13 @@
                                 </div>
                 
                                 <!-- Resources Section -->
-                                <div class="col-sm-6">
+                                  <div class="col-sm-6">
                                     <div class="footer-widget">
                                         <h6 class="widget-title">Resources</h6>
                                         <ul class="footer-menu list-unstyled">
                                             <li><a href="portfolio-2.html">Showcase</a></li>
                                             <li><a href="contact.html">Get in touch</a></li>
+                                            <li><a href="contact.html">Get Directions</a></li>
                                         </ul>
                                     </div>
                                 </div>
