--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ and Social Media services in Kigali, Rwanda. ">
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
+                    <!-- <div class="col-xl-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                         <div class="services-grid">
                             <div class="thumbnail">
                                 <img src="icon/icon-5.gif" alt="icon">
@@ -327,7 +327,7 @@ and Social Media services in Kigali, Rwanda. ">
                                 <a class='more-btn' href='service.html'>Find out more</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-xl-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="300">
                         <div class="services-grid">
                             <div class="thumbnail">
@@ -1112,6 +1112,7 @@ and Social Media services in Kigali, Rwanda. ">
                                         <ul class="footer-menu list-unstyled">
                                             <li><a href="portfolio-2.html">Showcase</a></li>
                                             <li><a href="contact.html">Get in touch</a></li>
+                                            <li><a href="contact.html">Get Directions</a></li>
                                         </ul>
                                     </div>
                                 </div>
