--- a/index.htm
+++ b/index.htm
@@ -334,7 +334,7 @@ and Social Media services in Kigali, Rwanda. ">
                                 <img src="icon/icon-6.gif" alt="icon">
                             </div>
                             <div class="content">
-                                <h5 class="title"> <a href='service.html'>Emergency Response Teams</a></h5>
+                                <h5 class="title"> <a href='service.html'>Emergency Response Planning</a></h5>
                                 <p>Rapid and trained response teams to handle unexpected incidents, ensuring safety and minimizing disruptions.
                                 </p>
                                 <a class='more-btn' href='service.html'>Find out more</a>
