--- a/pricing-table.html
+++ b/pricing-table.html
@@ -516,7 +516,7 @@
                                                 <li><a href="service.html#section3">Ushering & Liaison Services</a></li>
                                                 <li><a href="service.html#section4">Protocol & Guide Services </a></li>
                                                 <li><a href="service.html#section5">Corporate and Private Security</a></li>
-                                                <li><a href="service.html#section6">Emergency Response Teams</a></li>
+                                                <li><a href="service.html#section6">Emergency Response Planning</a></li>
                                             </ul>
                                         </div>
                                     </div>
