--- a/service.html
+++ b/service.html
@@ -205,7 +205,7 @@
                             <a class="nav-link" href="#section5">Corporate & Private Security</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#section6">Emergency Response Teams</a>
+                            <a class="nav-link" href="#section6">Emergency Response Planning</a>
                         </li>
                     </ul>
                 </div>
@@ -516,7 +516,7 @@
                 <div class="container">
                     <div class="section-heading heading-left">
                         <span class="subtitle">Service</span>
-                        <h2 class="title">Emergency Response Teams</h2>
+                        <h2 class="title">Emergency Response Planning</h2>
                     </div>
                     <div class="row">
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
