--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@ and Social Media services in Kigali, Rwanda. ">
 
      <!-- Custom CSS -->
      <link href="css/agency.css" rel="stylesheet">
+
+     
+    <!-- the Gallery LINK  -->
+
+    <link rel="stylesheet" type="text/css" href="cssH/w3.css" />
+    <link rel="stylesheet" type="text/css" href="cssH/w3-parallax.css" />
+    <link rel="stylesheet" href="cssH/horizontal.css" />
  
      <!-- Custom Fonts -->
      <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
