--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <script async="" src="gtag/js?id=G-K00L6EKK1D"></script>
 
 <title>Crowd Minders | Security and Protocole in Rwanda</title>
-<meta name="description" content="Crowd Minders is a Leading Digital Agency in Rwanda, with a 
-focus on Security, Guiding and Protocal.">
+<meta name="description" content="Crowd Minders, Rwanda’s top event security and protocol experts, delivering seamless management, VIP services, and safety for unforgettable events.">
 <meta name="viewport" content="width=device-width,initial-scale=1.0 , shrink-to-fit=no">
 <meta name="robots" content="index,follow">
 
